<resources>
    <string-array name="epaisseur">
        <item>Fine</item>
        <item>Epaisse</item>
    </string-array>
    <string-array name="epaisseur_values">
        <item>10</item>
        <item>20</item>
    </string-array>
    <string-array name="taille">
        <item>Petite</item>
        <item>Moyenne</item>
        <item>Géante</item>
    </string-array>
    <string-array name="taille_values">
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="app_name">PepeJoe</string>
    <string name="action_settings">Paramètres</string>
    <string name="title_activity_principal">PepeJoe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_verification" />
    <string name="invalid_phone_number">Ce numero de télephone n\'est pas valide.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="firebase_error">Une erreur s\'est produite pendant la vérification de votre numero de téléphone</string>
    <string name="prompt_name">Nom et prénom</string>
    <string name="prompt_address">Adresse</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_password_confirm">Confirmer le mot de passe</string>
    <string name="prompt_connect">Se conneceter</string>
    <string name="add_basket">Commander</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Adresse email invalide</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_invalid_name">Le nom et prénom est trop court</string>
    <string name="error_incorrect_password">Le mot de passe est incorrecte</string>
    <string name="error_notSame_password">Les mots de passe ne sont pas identiques</string>
    <string name="error_field_required">Champs obligatoire</string>
    <string name="all_permissions">PepeJoe a besoin de quelques permissions pour fonctionner correctement</string>
    <string name="permission_rationale">"Les permissions pour lire les contacts sont nécessaire pour l'autocompletion des emails."</string>
    <string name="title_activity_principale">PepeJoe</string>
    <string name="title_activity_create_livraison">Nouvelle livraison</string>
    <string name="not_connected">Aucune connexion internet. Veuillez réesayer ultérieurement</string>
    <string name="connection_error">Une erreur s\'est produite. Veuillez réessayer ultérieurement</string>
    <string name="connection_error_bluff">Vous êtes bien inscrit. Connectez vous ensuite.</string>
    <string name="connection_failed">La connexion à échouée. Veuillez réessayer ultérieurement</string>
    <string name="action_save_livraison">Enregistrer</string>
    <string name="colis_name">Nom du colis</string>
    <string name="your_order">Votre commande</string>
    <string name="colis_description">Description (optionnel)</string>
    <string name="colis_valeur">Valeur de votre commande (en FCFA)</string>
    <string name="loc_chargement">Adresse de collecte</string>
    <string name="loc_destination">Adresse de livraison</string>
    <string name="expedit_name">Nom de l\'expediteur</string>
    <string name="expedit_adresse">Adresse de l\'expediteur</string>
    <string name="destin_name">Nom du destinataire</string>
    <string name="destin_adresse">Adresse du destinataire</string>
    <string name="header_colis">Informations du colis</string>
    <string name="header_location">Localisations</string>
    <string name="header_expediteur">Je suis l\'expediteur ?</string>
    <string name="header_destinataire">Destinataire</string>
    <string name="rb_yes">Oui</string>
    <string name="rb_no">Non</string>
    <string name="scan_failed">Le scan a échoué. Veuillez réessayer ultérieurement</string>
    <string name="scan_title">Scanner de Code barre</string>
    <string name="ok">OK</string>
    <string name="abort_changes">Annuler les changements ?</string>
    <string name="abort_changes_text">Voulez-vous vraiment annuler les changements ?</string>
    <string name="search_hint">Rechercher</string>
    <string name="pick_location">Veuillez selectionner un emplacement</string>
    <string name="location_same">Les deux localisations sont les mêmes</string>
    <string name="loading">Chargement</string>
    <string name="photo_added">%d photos ajoutées</string>
    <string name="transaction_price">Prix de la course</string>
    <string name="transaction_message">Le montant de la course est de : %1$s FCFA</string>
    <string name="selection_limiter_pix">Vous ne pouvez pas sélectionner plus de %d éléments.</string>
    <string name="message_to_drag_up">Faites glisser les images vers le haut pour la galerie</string>
    <string name="pix_ok">OK</string>
    <string name="pix_tap_to_select">Appuyez sur la photo pour sélectionner</string>
    <string name="pix_selected">Choisi</string>
    <string name="pix_recent">Récent</string>
    <string name="pix_last_month">Le mois dernier</string>
    <string name="pix_last_week">La semaine dernière</string>
    <string name="title_activity_location">Map</string>
    <string name="default_info_title">Emplacement par défaut</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choisissez un lieu</string>
    <string name="menu_my_details"><b>MES DETAILS</b></string>
    <string name="menu_orders">Commandes</string>
    <string name="menu_cart">Panier</string>
    <string name="menu_saved_address">Adresses Enrégistrées</string>
    <string name="menu_notifications">Notifications</string>
    <string name="logout">Deconnexion</string>
    <string name="about">A propos</string>
    <string name="menu_profile">Mes informations</string>
    <string name="menu_other"><b>AUTRES</b></string>
    <string name="payments">Paiements</string>
    <string name="menu_payment">Moyens de paiement</string>
    <string name="settings">Paramètres</string>
    <string name="add_address">Ajouter une nouvelle adresse</string>
    <string name="add_phone">Ajouter un numero de téléphone</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="bt_default">Défaut</string>
    <string name="saved_address_title">Sélectionner une adresse</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">Annuler</string>
    <string name="none_paymentway">Vous n\'avez enrégistrer aucun moyen de paiement</string>
    <string name="delete_address_title">Supprimer Adresse</string>
    <string name="delete_address_message">Voulez vous vraiment supprimer cette addresse ?</string>
    <string name="add_payment_way">Ajouter un moyen de paiement</string>
    <string name="payment_way_title">Gérer les moyens de paiements</string>
    <string name="account_type" translatable="false">com.saltechdigital.pizzeria</string>
    <string name="account_manager_error">Vous avez déjà un compte</string>
    <string name="cvc">CVC</string>
    <string name="card_number_hint">Numero de la carte</string>
    <string name="card_hint_expire">Expiration</string>
    <string name="bank_card_owner">Nom du Titulaire de la carte</string>
    <string name="mobile_money_name">Nom du moyen de paiment (optionnel)</string>
    <string name="phone_number">Numero de télephone</string>
    <string-array name="payment_way">
        <item>Carte bancaire</item>
        <item>Flooz</item>
        <item>TMoney</item>
    </string-array>
    <string-array name="payment_way_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_settings">Paramètres</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pizzas">Pizzas</string>
    <string name="burger">Burgers</string>
    <string name="verdure">Verdures</string>
    <string name="amusebouche">Amuse Bouches</string>
    <string name="gourmandise">Gourmandises</string>
    <string name="desalterant">Desaltérants</string>
    <string name="menus">Menus</string>
    <string name="autre">Magic</string>
    <string name="pending_order_title">En cours</string>
    <string name="completed_order_title">Terminé</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="pharmacy_tag">Médicament sans ordonnance uniquement. Avant de prendre un médicamen, lisez attentivement la notice et consultez votre pharmacien. Nous ne serons pas tenu responsable de l\'usage que vous ferez des prduits disponible</string>
    <string name="coursier_tag">Nous collectons et livrons des courriers ou les produits disponibles dans votre ville. Si vous souhaitez acheter un produit, vous pouvez utilisez "Magic"</string>
    <string name="special_demande">Demande spéciale ?</string>
    <string name="track_order">Suivre la Commande</string>
    <string name="order_total">Total de la course</string>
    <string name="order_status">Statut</string>
    <string name="order_number">Commande#%1$s</string>
    <string name="order_total_fees">%1$s FCFA</string>
    <string name="premiers_pas_avec_d_liver">Premiers pas avec PepeJoe</string>
    <string name="suivant">Suivant</string>
    <string name="pizza_croute">Epaisseur de la pizza</string>
    <string name="pizza_taille">Taille de la pizza</string>
</resources>