<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/details"
        android:checkableBehavior="single">
        <item android:title="@string/menu_my_details">
            <menu>
                <item
                    android:id="@+id/nav_order"
                    android:icon="@drawable/ic_orders"
                    android:title="@string/menu_orders" />
                <item
                    android:id="@+id/nav_address"
                    android:icon="@drawable/saved_address"
                    android:title="@string/menu_saved_address" />
                <item
                    android:id="@+id/nav_notification"
                    android:icon="@drawable/ic_notifications"
                    android:title="@string/menu_notifications" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/other"
        android:checkableBehavior="single">
        <item android:title="@string/menu_other">
            <menu>
                <item
                    android:id="@+id/nav_payment"
                    android:icon="@drawable/ic_wallets"
                    android:title="@string/payments" />
                <item
                    android:id="@+id/nav_wallet"
                    android:icon="@drawable/ic_cards"
                    android:title="@string/menu_payment" />
                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/ic_accounts"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_infos"
                    android:title="@string/about" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/logout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
