<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include_poids"
        layout="@layout/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp" />

    <LinearLayout
        android:id="@+id/mobile_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_money_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_money_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:textColorHint="@color/colorGrey" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_money_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColorHint="@color/colorGrey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bank_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bank_card_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bank_card_owner"
            android:textColorHint="@color/colorGrey" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bank_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number_hint"
            android:textColorHint="@color/colorGrey" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bank_card_cvc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvc"
            android:inputType="number"
            android:textColorHint="@color/colorGrey" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bank_card_expire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_hint_expire"
            android:textColorHint="@color/colorGrey" />
    </LinearLayout>

</LinearLayout>