<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true"
    card_view:elevation="5dp">

    <LinearLayout
        android:id="@+id/item_address_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/tv_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:textStyle="bold"
                tools:text="Informations du colis" />

            <ImageView
                android:id="@+id/is_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/ic_menu_check" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tv_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/address_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="Informations du colis et quelques autres informations pas tres importantes juste saisi ici pour voir le rendu que le text aura dans la vie réel de l'application. apparemment je suis a la troisieme ligne donc je pense que c'est assez représentatif." />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/address_edit"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit" />

            <Button
                android:id="@+id/address_delete"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <Button
                android:id="@+id/address_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_color"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/bt_default" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
