<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true"
        card_view:elevation="5dp">

        <FrameLayout
            android:id="@+id/frame_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/platview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ambouche"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp"
                android:contentDescription="@string/colis_description" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_vertical"
                android:alpha="0.7"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/plat_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="Pharmacie" />

            </androidx.cardview.widget.CardView>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/linear_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/pizza_croute"/>

            <Spinner
                android:id="@+id/epaisseur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/epaisseur"
                android:entryValues="@array/epaisseur_values"
                android:spinnerMode="dialog"
                android:layout_marginTop="5dp"
                android:prompt="@string/pizza_croute"
                android:layout_marginStart="12dp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/pizza_taille"/>

            <Spinner
                android:id="@+id/taille"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/taille"
                android:spinnerMode="dialog"
                android:entryValues="@array/taille_values"
                android:prompt="@string/pizza_taille"
                android:layout_marginTop="5dp"
                android:layout_marginStart="12dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/order_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/bt_border"
            android:text="@string/add_basket"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</LinearLayout>
